--- a/public/style.css
+++ b/public/style.css
@@ -1,51 +1,51 @@
-body{
+body {
     font-family: 'Nunito';
 }
 
-h2{
+h2 {
     font-size: 18px;
     padding: 10px 20px;
     color: #575ed8;
 }
 
-#mario-chat{
+#mario-chat {
     max-width: 600px;
     margin: 30px auto;
     border: 1px solid #ddd;
-    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+    box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
     border-radius: 2px;
 }
 
-#chat-window{
-    height: 400px;
+#chat-window {
+    height: 700px;
     overflow: auto;
-    background: #f9f9f9;
+    background: lightgrey;
 }
 
-#output p{
+#output p {
     padding: 14px 0px;
     margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
     color: #555;
 }
 
-#feedback p{
+#feedback p {
     color: #aaa;
     padding: 14px 0px;
     margin: 0 20px;
 }
 
-#output strong{
+#output strong {
     color: #575ed8;
 }
 
-label{
+label {
     box-sizing: border-box;
     display: block;
     padding: 10px 20px;
 }
 
-input{
+input {
     padding: 10px 20px;
     box-sizing: border-box;
     background: #eee;
@@ -58,8 +58,8 @@ input{
     font-size: 16px;
 }
 
-button{
-    background: #575ed8;
+button {
+    background: green;
     color: #fff;
     font-size: 18px;
     border: 0;
@@ -67,3 +67,4 @@ button{
     width: 100%;
     border-radius: 0 0 2px 2px;
 }
+
